--- a/dataset/.gitignore
+++ b/dataset/.gitignore
@@ -1,6 +1,4 @@
 # Imagenet dataset byproducts
 imagenet_fall11_urls.tgz
 fall11_urls.txt
-imagenet_original/
-imagener_resized/
-imagener_filtered/
+imagenet/
