--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,35 @@
-PIL
-opencv-python
 appdirs==1.4.3
+appnope==0.1.0
+cycler==0.10.0
+decorator==4.0.11
+ipykernel==4.6.1
+ipython==6.0.0
+ipython-genutils==0.2.0
+jedi==0.10.2
+jupyter-client==5.0.1
+jupyter-core==4.3.0
 Keras==2.0.3
+matplotlib==2.0.1
 numpy==1.12.1
 olefile==0.44
 packaging==16.8
+pexpect==4.2.1
+pickleshare==0.7.4
 Pillow==4.1.0
+prompt-toolkit==1.0.14
 protobuf==3.2.0
+ptyprocess==0.5.1
+Pygments==2.2.0
 pyparsing==2.2.0
+python-dateutil==2.6.0
+pytz==2017.2
 PyYAML==3.12
+pyzmq==16.0.2
 scipy==0.19.0
+simplegeneric==0.8.1
 six==1.10.0
 tensorflow==1.0.1
 Theano==0.9.0
-wheel==0.29.0
+tornado==4.5.1
+traitlets==4.3.2
+wcwidth==0.1.7
