--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Keras==2.0.3
 matplotlib==2.0.1
 numpy==1.12.1
 olefile==0.44
+opencv-python==3.2.0.7
 packaging==16.8
 pexpect==4.2.1
 pickleshare==0.7.4
@@ -22,6 +23,7 @@ ptyprocess==0.5.1
 Pygments==2.2.0
 pyparsing==2.2.0
 python-dateutil==2.6.0
+python-resize-image==1.1.11
 pytz==2017.2
 PyYAML==3.12
 pyzmq==16.0.2
@@ -32,4 +34,5 @@ tensorflow==1.0.1
 Theano==0.9.0
 tornado==4.5.1
 traitlets==4.3.2
+urllib3==1.13.1
 wcwidth==0.1.7
