--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,4 +5,4 @@ current_version = 0.1.0
 
 [bumpversion:file:README.md]
 
-[bumpversion:file:koala/__init__.py]
+[bumpversion:file:src/koalarization/__init__.py]
